tests/invalid/comprehension_enumerate_wrong_arg_count/main.py
def run_case() -> None:
    x: list[int] = [i for (i, v) in enumerate([1, 2], 1)]

if __name__ == "__main__":
    run_case()
